<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nick.insulinpump.MainActivity">

    <TextView
        android:id="@+id/battery_percentage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/battery_percentage"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="75sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/last_insulin_dose_delivered"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dose_delivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00_0000_00_00pm_00mg"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/manual_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="goToManualMode"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/manual_mode"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/system_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/system_message"
        android:textAlignment="center"
        android:textSize="30sp" />


</LinearLayout>
